--- a/wordhunt_frontend/src/components/gameBoard/gameBoard.css
+++ b/wordhunt_frontend/src/components/gameBoard/gameBoard.css
@@ -10,6 +10,7 @@
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
+    touch-action: none;
 }
 
 .line-layer {
