--- a/wordhunt_frontend/src/components/gameBoard/gameBoard.css
+++ b/wordhunt_frontend/src/components/gameBoard/gameBoard.css
@@ -66,3 +66,12 @@
 .board-container .col.selected-yellow {
     background-color: rgb(255, 244, 43);
 }
+
+.cpu-board .border {
+    pointer-events: none;
+}
+
+.cpu-board .border:hover {
+    background-color: inherit !important;
+    cursor: default !important;
+}
